<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phoneNumber"
        android:id="@+id/view5_tv_phone_number"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/view5_et_phone_number"
        android:layout_below="@+id/view5_tv_phone_number"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchPhoneNumber"
        android:id="@+id/view5_bt_search"
        android:layout_alignBottom="@+id/view5_et_phone_number"
        android:layout_toRightOf="@+id/view5_et_phone_number"
        android:layout_toEndOf="@+id/view5_et_phone_number"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/view5_tv_show"
        android:layout_below="@+id/view5_et_phone_number"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city_name"
        android:id="@+id/view5_tv_city"
        android:layout_below="@+id/view5_tv_show"
        android:layout_marginTop="15dp"
        android:textSize="20sp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/view5_et_city"
        android:layout_below="@+id/view5_tv_city"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:layout_toLeftOf="@+id/view5_bt_search"
        android:layout_toStartOf="@+id/view5_bt_search" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="查询中国城市"
        android:id="@+id/view5_bt_weather"
        android:layout_alignBottom="@+id/view5_et_city"
        android:layout_alignLeft="@+id/view5_bt_search"
        android:layout_alignStart="@+id/view5_bt_search" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2"
        android:layout_below="@+id/view5_et_city"
        android:layout_marginTop="15dp"
        >

        <TextView
            android:id="@+id/view5_tv_show_weather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        </ScrollView>


</RelativeLayout>
